[package]
name = "netcode"
version = "0.3.1"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]
build = "rust/build.rs"
links = "libnetcode"
keywords = ["netcode"]
license = "BSD-3-Clause"
repository = "https://github.com/vvanders/netcode-rust"
documentation = "https://docs.rs/netcode"
description = "Wrapper for netcode.io library"
edition = "2018"
exclude = [
    "go/*"
]

[dependencies]
libsodium-sys = "0.2.5"
log = "0.3.6"
byteorder = "1.0.0"
env_logger = "0.4.2"
time = "0.1.36"
libc = "0.2.0"
err-derive = "0.2.1"

[dev-dependencies]
lazy_static = "0.2.6"

[build-dependencies]
cc = "1.0"
bindgen = "0.52.0"

[[bin]]
path = "rust/src/example.rs"
name = "example"

[lib]
path = "rust/src/lib.rs"
